# wallet-android-new

./: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build_release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/xml/: file_provider_paths.xml
buildSrc/src/main/kotlin/: Config.kt
data/auth-api/: build.gradle.kts
data/auth-impl/: build.gradle.kts
data/core/: build.gradle.kts
data/notifications-api/: build.gradle.kts
data/notifications-impl/: build.gradle.kts
data/prices-api/: build.gradle.kts
data/prices-impl/: build.gradle.kts
data/settings-api/: build.gradle.kts
data/settings-impl/: build.gradle.kts
data/tonapi/: build.gradle.kts
data/tonclient-api/: build.gradle.kts
data/tonclient-impl/: build.gradle.kts
data/tonconnect-api/: build.gradle.kts
data/tonconnect-impl/: build.gradle.kts
data/transactions-api/: build.gradle.kts
data/transactions-impl/: build.gradle.kts
data/wallet-api/: build.gradle.kts
data/wallet-impl/: build.gradle.kts
domain/blockchain-api/: build.gradle.kts
domain/blockchain-api/src/main/java/org.ton.wallet.domain.blockhain.api/: AddressType.kt  GetAddressTypeUseCase.kt  GetAddressUseCase.kt  GetRecoveryWordsUseCase.kt
domain/blockchain-impl/: build.gradle.kts
domain/blockchain-impl/src/main/java/org.ton.wallet.domain.blockhain.impl/: GetAddressTypeUseCaseImpl.kt  GetAddressUseCaseImpl.kt  GetRecoveryHintsUseCaseImpl.kt
domain/settings-api/: build.gradle.kts
domain/settings-impl/: build.gradle.kts
domain/tonconnect-api/: build.gradle.kts
domain/tonconnect-impl/: build.gradle.kts
domain/transactions-api/: build.gradle.kts
domain/transactions-impl/: build.gradle.kts
domain/wallet-api/: build.gradle.kts
domain/wallet-impl/: build.gradle.kts
feature/onboarding-api/: build.gradle.kts
feature/onboarding-impl/: build.gradle.kts
feature/passcode-api/: build.gradle.kts
feature/passcode-impl/: build.gradle.kts
feature/scanqr-api/: build.gradle.kts
feature/scanqr-impl/: build.gradle.kts
feature/send-api/: build.gradle.kts
feature/send-impl/: build.gradle.kts
feature/settings-api/: build.gradle.kts
feature/settings-impl/: build.gradle.kts
feature/tonconnect-api/: build.gradle.kts
feature/tonconnect-impl/: build.gradle.kts
feature/transactions-api/: build.gradle.kts
feature/transactions-impl/: build.gradle.kts
feature/wallet-api/: build.gradle.kts
feature/wallet-impl/: build.gradle.kts
gradle/: common-java.gradle  common.gradle  libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib/core/: build.gradle.kts
lib/core-ui/: build.gradle.kts
lib/di/: build.gradle.kts
lib/lists/: build.gradle.kts
lib/log/: build.gradle.kts
lib/qr-builder/: build.gradle.kts
lib/rlottie/: build.gradle.kts
lib/rlottie/src/main/cpp/: CMakeLists.txt  rlottie_jni.cpp
lib/rlottie/src/main/cpp/lz4/: CMakeLists.txt
lib/rlottie/src/main/cpp/rlottie/: CMakeLists.txt
lib/rlottie/src/main/cpp/rlottie/src/lottie/rapidjson/: CMakeLists.txt
lib/screen/: build.gradle.kts
lib/security/: build.gradle.kts
lib/security/src/main/cpp/: CMakeLists.txt  security_jni.c
lib/security/src/main/cpp/argon2/: CMakeLists.txt
lib/sqlite/: build.gradle.kts
lib/sqlite-lib/: build.gradle.kts
lib/tonconnect/: build.gradle.kts
lib/tonconnect/src/main/cpp/: CMakeLists.txt  tonconnect_jni.c
strings/: build.gradle.kts
strings/src/debug/res/values/: strings.xml
strings/src/main/res/values/: strings.xml
uicomponents/: build.gradle.kts
uikit/: build.gradle.kts
uikit/src/main/res/drawable/: bkg_button_camera.xml  bkg_button_primary.xml  bkg_button_secondary.xml  bkg_button_transparent.xml  bkg_list_item.xml  bkg_rect_rounded_18dp.xml  bkg_rect_rounded_6dp.xml  bkg_rect_rounded_top_12dp.xml  bkg_section_divider.xml  bkg_splash.xml  bkg_transaction.xml  bkg_transaction_msg.xml  circle_dot.xml  ic_arrow_pull.xml  ic_check_18.xml  ic_clear_16.xml  ic_close_24.xml  ic_copy_28.xml  ic_delete.xml  ic_done.xml  ic_flashlight_28.xml  ic_image_select_28.xml  ic_launcher_foreground.xml  ic_paste_20.xml  ic_receive_18.xml  ic_scan_20.xml  ic_scan_24.xml  ic_send_18.xml  ic_settings_24.xml  ic_warning_32.xml  ripple_oval_dark.xml  ripple_oval_light.xml  ripple_rect.xml  ripple_rect_6dp_dark.xml  ripple_rect_6dp_light.xml  text_cursor.xml  toolbar_shadow.xml
uikit/src/main/res/raw/: lottie_success  lottie_waiting_ton
uikit/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  styles.xml  themes.xml
uikit/src/main/res/values-v31/: themes.xml
(+407 files in other folders)
